compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__comparison_op_wrong_types_enums_less_eq.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Different enums\n    type e1 : enum(v)\n    type e2 : enum(v)\n    var ae : e1\n    var be : e2\n    var aA : enum(v)\n    var bA : enum(v)\n\n    % should all produce boolean anyway\n    var _v_res : boolean\n\n    _v_res := ae <= be\n    _v_res := be <= ae\n    _v_res := aA <= ae\n    _v_res := ae <= aA\n    _v_res := aA <= bA\n    "
---
"e1"@"src/main.t:32..34" [Type]: enum[DefId(PackageId(0), LocalDefId(1))] ( "v"@SpanId(4), )
"e1"@"src/main.t:37..44" [Enum]: <error>
"v"@"src/main.t:42..43" [EnumVariant]: enum[DefId(PackageId(0), LocalDefId(1))] ( "v"@SpanId(4), )
"e2"@"src/main.t:54..56" [Type]: enum[DefId(PackageId(0), LocalDefId(4))] ( "v"@SpanId(7), )
"e2"@"src/main.t:59..66" [Enum]: <error>
"v"@"src/main.t:64..65" [EnumVariant]: enum[DefId(PackageId(0), LocalDefId(4))] ( "v"@SpanId(7), )
"ae"@"src/main.t:75..77" [ConstVar(Var, No)]: enum[DefId(PackageId(0), LocalDefId(1))] ( "v"@SpanId(4), )
"be"@"src/main.t:91..93" [ConstVar(Var, No)]: enum[DefId(PackageId(0), LocalDefId(4))] ( "v"@SpanId(7), )
"aA"@"src/main.t:107..109" [ConstVar(Var, No)]: enum[DefId(PackageId(0), LocalDefId(9))] ( "v"@SpanId(12), )
"<anonymous>"@"src/main.t:112..119" [Enum]: <error>
"v"@"src/main.t:117..118" [EnumVariant]: enum[DefId(PackageId(0), LocalDefId(9))] ( "v"@SpanId(12), )
"bA"@"src/main.t:128..130" [ConstVar(Var, No)]: enum[DefId(PackageId(0), LocalDefId(12))] ( "v"@SpanId(15), )
"<anonymous>"@"src/main.t:133..140" [Enum]: <error>
"v"@"src/main.t:138..139" [EnumVariant]: enum[DefId(PackageId(0), LocalDefId(12))] ( "v"@SpanId(15), )
"_v_res"@"src/main.t:190..196" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:225..227: mismatched types for `<=`
| note for src/main.t:228..230: this is of type `enum e2`
| note for src/main.t:222..224: this is of type `enum e1`
| error for src/main.t:225..227: `enum e1` cannot be compared to `enum e2`
| info: operands must both be the same type
error at src/main.t:248..250: mismatched types for `<=`
| note for src/main.t:251..253: this is of type `enum e1`
| note for src/main.t:245..247: this is of type `enum e2`
| error for src/main.t:248..250: `enum e2` cannot be compared to `enum e1`
| info: operands must both be the same type
error at src/main.t:271..273: mismatched types for `<=`
| note for src/main.t:274..276: this is of type `enum e1`
| note for src/main.t:268..270: this is of type `enum <anonymous>`
| error for src/main.t:271..273: `enum <anonymous>` cannot be compared to `enum e1`
| info: operands must both be the same type
error at src/main.t:294..296: mismatched types for `<=`
| note for src/main.t:297..299: this is of type `enum <anonymous>`
| note for src/main.t:291..293: this is of type `enum e1`
| error for src/main.t:294..296: `enum e1` cannot be compared to `enum <anonymous>`
| info: operands must both be the same type
error at src/main.t:317..319: mismatched types for `<=`
| note for src/main.t:320..322: this is of type `enum <anonymous>`
| note for src/main.t:314..316: this is of type `enum <anonymous>`
| error for src/main.t:317..319: `enum <anonymous>` cannot be compared to `enum <anonymous>`
| info: operands must both be the same type
